tests/type-check/bad/data-as-object-update-non-ref.arr
data Foo:
  | bar(a :: Number, ref b :: String)
end

# bar(1, "a").a is a String but update is for refs 
bar(1, "a")!{a: 3}